--- a/HTML/PSD to HTML/story-listing.html
+++ b/HTML/PSD to HTML/story-listing.html
@@ -111,12 +111,20 @@
     <section class="container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-3 p-0">
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card ">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center  position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+
+
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -141,12 +149,17 @@
             </div>
 
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
-
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class=" top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none "
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -170,12 +183,19 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -199,12 +219,18 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -228,12 +254,18 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -257,12 +289,18 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -286,12 +324,17 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
-
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -315,12 +358,18 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -344,12 +393,18 @@
 
             </div>
             <div class="col mt-3">
-                <div class="card">
-                    <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
-                        class="card-img-top position-relative" alt="...">
+                <div class="card sl-card">
+                    <div class="position-relative story-card">
+                        <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                            class="card-img-top" alt="...">
+                        <div class="top-0 bottom-0 start-0 end-0 align-items-center justify-content-center position-absolute d-none"
+                            id="view-details-btn">
+                            <a href="#" class="btn rounded-pill border text-white mt-1 px-3 font-size">View Details
+                                <img src="./images/right-arrow-white.svg" alt="#" class="arrow"></a>
+                        </div>
+                    </div>
 
-                    <span
-                        class="theme-name align-text-top py-1 px-4 mx-auto position-relative translate-middle-y">Customer
+                    <span class="theme-name align-text-top py-1 px-4 mx-auto translate-middle-y">Customer
                         Experience</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">10 User and Customer Engagement Strategies for 2019
@@ -426,6 +481,7 @@
         searchBtn.addEventListener("click", () => {
             searchBar.focus();
         });
+
 
     </script>
 </body>
